<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PumaBus</string>   
	<string name="menu_routes">Rutas</string>
    <string name="menu_main">Principal</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_timetables">Horarios</string>
	<string name="menu_about">Acerca de</string>
    <string name="menu_places">Lugares</string>
	<string name="menu_more_info">Más información</string>
    
	<string name="map_title">Mapa del Campus</string>
	<string name="routes_title">Rutas del Pumabus</string>
	
	<string name="menu_more">Más</string>
	<string name="about_title">Acerca de</string>
	<string name="about_text">Proyecto desarrollado con el apoyo de:</string>
	
	<string name="more_info_title">Más información</string>
	<string name="more_info_text_intro">Esta aplicación y la infraestructura de telecomunicaciones incorporada a cada Pumabús están en proceso de mejora:</string>
	<string name="more_info_text_content">A ciertas horas del día, por la saturación de la red GSM cercana al campus, la ubicación reportada por algunos pumabuses podría no estar disponible o estarlo con un tiempo de retraso considerable.</string>
	<string name="more_info_web_url">http://app-pumabus.unam.mx</string>
	<string name="more_info_version">Versión 1</string>
	
	<string name="timetables_weekdays">Lunes a Viernes</string>
	<string name="timetables_saturdays">Sábados</string>
	<string name="timetables_sundays">Domingos</string>		
	
	<string name="timetables_weekdays_routes">Todas las rutas de 6:00 a 22:00 hrs</string>
	<string name="timetables_saturdays_routes_one">Rutas 1, 2, 4, 5 y 9 de 6:00 a 15:00 hrs</string>
	<string name="timetables_saturdays_routes_two">Rutas 3 y 10 de 6:00 a 23:00 hrs</string>
	<string name="timetables_sundays_routes">Rutas 3 y 10 de 6:00 a 23:00 hrs</string>
	
	<string name="menu_trigger_legend">Menú</string>
	<string name="service_status_legend">Servicio:</string>
	<string name="service_status_updating">Actualizando &#8230;</string>
	
	<string name="service_status_normal">Normal</string>
	<string name="service_status_few">Escaso</string>
	<string name="service_status_very_few">Muy escaso</string>
	<string name="service_status_stopped">Detenido</string>
	<string name="service_status_unknown">Desconocido</string>
	
	<string name="vehicle">PUMABUS</string>
	<string name="received">Recibido el</string>
	<string name="speed">Velocidad</string>
	
	<string name="loading_routes_title">Espere por favor</string>
	<string name="loading_routes_action">Descargando rutas</string>
	
	<string name="connectivity_problem_title">Aviso</string>
	<string name="connectivity_problem">No ha sido posible contactar con el servidor de datos. Por favor, revisa tu conexión a internet.</string>
	
	<string name="school">Escuela</string>
	<string name="faculty">Facultad</string>
	<string name="institute">Instituto</string>
	<string name="library">Biblioteca</string>
	<string name="museum">Edificio Cultural</string>
	<string name="sportCenter">Espacio Deportivo</string>
	<string name="foodStore">Tiendita</string>
	<string name="restaurant">Restaurante</string>
	<string name="laboratory">Laboratorio</string>
	<string name="pumabusStop">Parada del Pumabús</string>
	<string name="bicipumaStation">Estación Bicipuma</string>
	<string name="otherBuilding">Otro</string>
	<string name="openSpace">Espacio Abierto</string>
	
	<string name="search">Búsqueda</string>
	
	<string name="accept">Aceptar</string>
	<string name="none"></string>
</resources>