<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
   	<item android:title="@string/menu_main" android:icon="@drawable/home" android:id="@+id/main" />
   	<item android:title="@string/menu_map" android:icon="@drawable/map" android:id="@+id/mapview" />
   	<item android:title="@string/menu_routes" android:icon="@drawable/routes" android:id="@+id/routes" />
   	
   	<item android:id="@+id/more" android:title="@string/menu_more" android:icon="@drawable/more" >
        <menu>
            <item android:title="@string/menu_places" android:id="@+id/places" />
			<item android:title="@string/menu_timetables" android:id="@+id/timetables" />
   			<item android:title="@string/menu_help" android:id="@+id/help" />
    	</menu>
    </item>
   	
</menu>
    