<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/instruction_two"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/pattern_dark"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/pattern_headers" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="25dp"
            android:paddingTop="10dip"
            android:shadowColor="#000"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="1.3"
            android:text="@string/about_title"
            android:textColor="#fff"
            android:textSize="19sp"
            android:textStyle="bold" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

			<ImageView
			    android:id="@+id/more_info_icon"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:contentDescription="@string/none"
			    android:layout_alignParentRight="true"
			    android:layout_alignParentTop="true"
			    android:layout_marginTop="5dp"
			    android:layout_marginRight="10dp"
			    android:src="@drawable/info_navbar" />

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/about_text"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/ribbon_top"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView1"
        android:background="#403E3E" />
    
    <android.support.v4.view.ViewPager
        android:id="@+id/logoPager"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ribbon_top"
        android:background="#000" >
        
    </android.support.v4.view.ViewPager>

   	<View
        android:id="@+id/ribbon_bottom"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/logoPager"
        android:layout_alignParentLeft="true"
        android:background="#403E3E" />
	
   	<com.viewpagerindicator.CirclePageIndicator
   	    android:id="@+id/pageIndicator"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_below="@+id/ribbon_bottom"
    	android:paddingTop="10dp"
    	android:layout_marginTop="15dp"/>
   	
</RelativeLayout>
